examples/reference/segment_cross_module_error.err
Assembly failed:
24: ERROR [asm402]
   24 |     .EMIT_BYTE $AA      ; ERROR: EMIT_BYTE not imported
                        ^
ERROR: No instruction found for .EMIT_BYTE
